# hk-pipeline

./: Cargo.toml  README.md
crates/: Cargo.toml
crates/connector/: Cargo.toml
crates/connector/src/: lib.rs
crates/embedder/: Cargo.toml
crates/embedder/src/: lib.rs
crates/sink/: Cargo.toml
crates/sink/src/: lib.rs
models/: .gitignore
src/: main.rs
