[workspace]
members = [
  ".",
  "crates/connector",
  "crates/embedder",
  "crates/sink",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }

[package]
name = "hk-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
connector = { path = "crates/connector" }
tokio = { workspace = true }
anyhow = { workspace = true }
embedder = { path = "crates/embedder" }
sink = { path = "crates/sink" }
hf-hub = "0.5.0"
