[package]
name = "sink"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
surrealdb = { version = "3.0.1", features = ["kv-mem"] }
tokio = { workspace = true, features = ["full"] }
uuid = { version = "1", features = ["v4"] }
